[package]
name = "commitment"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
group = { git = "https://github.com/dwallet-labs/group.git" }
crypto-bigint = { version = "0.5.5", features = ["rand_core", "serde"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
merlin = { version = "3", default-features = false }
thiserror = "1.0"

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["std"] }
bulletproofs = "4.0.0"
[features]

